script/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ithome-ingress
    namespace: default
spec:
   backend:
    serviceName: demo-pod2
    servicePort: 8080
